--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,6 @@ body {
     margin: 15px;
     overflow: hidden;
     position: relative;
-    background: linear-gradient(to top, #000, #000 80%);
 }
 
 img {
@@ -59,10 +58,7 @@ img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
-
-.img__link {
-    z-index: 1;
+    box-shadow: 5px 5px 10px 10px rgba(0, 0, 0, .5);
 }
 
 .data {
@@ -77,6 +73,8 @@ img {
     line-height: 0.8;
     color: #fff;
     text-align: center;
+    background-color: #3d3d3d;
+    opacity: .8;
 } 
 
 .num {
@@ -110,4 +108,24 @@ img {
     font-size: 1.3rem;
     font-weight: 500;
     color: #fff;
+}
+
+.button {
+    background-color: #f72b3b;
+    color: #fff;
+    outline: 0;
+    border: 0;
+    height: 55px;
+    width: 200px;
+    padding: 16px 32px;
+    font-size: 1.6rem;
+    position: relative;
+    margin: 50px auto;
+    display: block;
+    overflow: hidden;
+    text-transform: uppercase;
+    font-family: 'Raleway', sans-serif;
+    font-size: 2rem;
+    font-weight: 200;
+    line-height: 1.2;
 }
