--- a/css/styles.css
+++ b/css/styles.css
@@ -51,25 +51,15 @@ body {
     margin: 15px;
     overflow: hidden;
     position: relative;
+    box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, .7);
 }
 
-img {
+.img__link {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 5px 5px 10px 10px rgba(0, 0, 0, .5);
-}
-
-link::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: linear-gradient(to top, rgba(0,0,0, 1) 0%, rgba(0,0,0, 0) 100%);
-    z-index: 2;
+    background-image: linear-gradient(to top, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
 }
 
 .data {
