--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,16 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.img__link::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
     background-image: linear-gradient(to top, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
 }
 
@@ -119,7 +129,6 @@ body {
     width: 200px;
     padding: 16px 32px;
     font-size: 1.6rem;
-    position: relative;
     margin: 50px auto;
     display: block;
     overflow: hidden;
@@ -128,4 +137,13 @@ body {
     font-size: 2rem;
     font-weight: 200;
     line-height: 1.2;
+}
+
+.button:hover,
+.button:focus,
+.button:active {
+    cursor: pointer;
+    box-shadow: 0px 3px 2px 1px rgba(0, 0, 0, .35);
+    transform: scale(1.1);
+    transition: all .5s ease;
 }
